[project]
name = "ri_planning"
authors = [
  { name="Jerome Guzzi", email="jerome@idsia.ch" },
]
description = "Indoor planning"
requires-python = ">=3.7"
dependencies = [
    "networkx",
    "shapely",
    "lxml",
    "rtree"
]
dynamic = ["version"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ri_planning"]
package-dir = {"ri_planning" = "ri_planning"}
# packages = ["ri_planning", "indoorgml"]
# package-dir = {"ri_planning" = ".", "indoorgml" = "src", "planners" = "src"}


[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
exclude = [
    'display',
]
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_untyped_calls  = true
disallow_incomplete_defs = true
check_untyped_defs = true
pretty = false
# mypy per-module options:

[tool.flake8]
ignore = ['E231', 'E241']
per-file-ignores = [
    # '__init__.py:F401',
]
max-line-length = 100
count = true
exclude = [
    'display',
]

